--- a/.github/workflows/refresh-set-publish.yml
+++ b/.github/workflows/refresh-set-publish.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           node-version: 20
           registry-url: https://registry.npmjs.org/
-      - run: yarn --frozen-lockfile
+      - run: yarn
       - run: yarn npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
