--- a/.github/workflows/refresh-set-publish.yml
+++ b/.github/workflows/refresh-set-publish.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-      - run: yarn --frozen-lockfile
+      - run: yarn
       - run: yarn test
 
   publish:
